@@ -103,9 +103,9 @@
         </dependency>
 
         <dependency>
-            <groupId>com.aliyun</groupId>
-            <artifactId>bailian20231229</artifactId>
-            <version>2.6.2</version>
+            <groupId>com.alibaba</groupId>
+            <artifactId>dashscope-sdk-java</artifactId>
+            <version>2.22.4</version>
         </dependency>
     </dependencies>
 
@@ -122,6 +122,9 @@
                         </path>
                     </annotationProcessorPaths>
                     <release>17</release>
+                    <source>21</source>
+                    <target>21</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
